Created profile page

--- a/services/templates/index.html
+++ b/services/templates/index.html
@@ -3,7 +3,8 @@
 {% block content %}
   <h1 class="pt-3">Dashboard</h1>
   <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Dashboard</li>
+    <li class="breadcrumb-item">Dashboard</li>
+    <li class="breadcrumb-item active">{{ user.username }}</li>
   </ol>
   <div class="row">
     <div class="col-xl-12">
