--- a/services/templates/base.html
+++ b/services/templates/base.html
@@ -37,7 +37,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 {% if user.is_authenticated %}
-                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="{% url 'accounts:profile' username=user.username %}">Profile</a>
                 <a class="dropdown-item" href="#">Another action</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
