Adjusted urls on base.html

--- a/services/templates/base.html
+++ b/services/templates/base.html
@@ -26,7 +26,7 @@
                 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Explore</a>
+              <a class="nav-link" href="{% url 'accounts:all' %}">Explore</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Closet</a>
@@ -37,13 +37,13 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 {% if user.is_authenticated %}
-                <a class="dropdown-item" href="{% url 'accounts:profile' username=user.username %}">Profile</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
+                  <a class="dropdown-item" href="{% url 'accounts:current' %}">Profile</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
                 {% else %}
-                <a class="dropdown-item" href="{% url 'accounts:signup' %}">SignUp</a>
-                <a class="dropdown-item" href="{% url 'accounts:login' %}">Login</a>
+                  <a class="dropdown-item" href="{% url 'accounts:signup' %}">SignUp</a>
+                  <a class="dropdown-item" href="{% url 'accounts:login' %}">Login</a>
                 {% endif %}
               </div>
             </li>
@@ -54,7 +54,11 @@
 
     <main class="m-5">
       <div class="container-fluid">
+        <h1 class="pt-3"></h1>
+        <div class="container">
+        {% block breadcrumb %}{% endblock %}
         {% block content %}{% endblock %}
+      </div>
       </div>
       <!-- container-fluid -->
     </main>
@@ -80,6 +84,6 @@
       $('#dataTable').DataTable();
     });
   </script>
-
+  {% block script %}{% endblock %}
 </body>
 </html>
