--- a/services/templates/base.html
+++ b/services/templates/base.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="{% url 'accounts:all' %}">Explore</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'closet:add' %}">Closet</a>
+              <a class="nav-link" href="{% url 'closet:clothes' %}">Closet</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
