Added Outfit url in base.html

--- a/services/templates/base.html
+++ b/services/templates/base.html
@@ -29,7 +29,10 @@
               <a class="nav-link" href="{% url 'accounts:all' %}">Explore</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'closet:clothes' %}">Closet</a>
+              <a class="nav-link" href="{% url 'closet:outfits' %}">Outfits</a>
+            </li>
+            <li>
+              <a class="nav-link" href="{% url 'closet:clothes' %}">Clothes</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -62,6 +65,7 @@
       </div>
       <!-- container-fluid -->
     </main>
+    <h1 class="pb-5"></h1>
     <footer class="fixed-bottom py-4 bg-light mt-auto">
       <div class="container-fluid">
         <div class="d-flex align-items-center justify-content-between small">
