--- a/services/templates/home.html
+++ b/services/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Home{% endblock %}
 
@@ -6,58 +7,57 @@
   <div class="home_mt">
     <main>
       <div class="container-fluid">
-        <div class="home-box top">
 
-          <div class="pt-3 top-title">
-            What's Your Outfit Today?
-          </div>
-          <div class="top-img">
-            <img src="{{ url_for('static', filename='img/outfit-img.jpg" alt="top img">
-          </div>
-          <div class="top-line-pad line-letter">
-            This web app named <strong><i>ClothesManager</i></strong> helps you to decide what outfit you are going to wear.<br>
-            You only register all clothes in your closet.<br>
-            ClothesManager suggests some comfortable clothes with today's weather forecast.<br>
-            It is easier to choose what you want to wear with this app.<br>
-            You can also save outfits info on this app then you won't miss your favorite outfits!
-          </div>
+        <div class="p-5 mt-5 display-3 text-secondary text-center">
+          What's Your Outfit Today?
         </div>
-        <!-- home-box -->
 
-        <div class="home-box middle">
-          <div class="middle-img">
-            <img src="{{ url_for('static', filename='img/hat_choosing.jpg" alt="choose img">
-          </div>
-          <div class="middle-line-pad line-letter">
+        <img src="{% static 'img/home/outfit-img.jpg' %}" class="p-5 img-fluid" alt="top img">
+
+        <div class="m-5 lead text-muted text-center">
+          <strong>
+            <i>ClothesManager</i>
+          </strong>
+          helps you to decide what outfit you are going to wear.<br>
+          You only register all clothes in your closet.<br>
+          ClothesManager suggests some comfortable clothes with today's weather forecast.<br>
+          It is easier to choose what you want to wear with this app.<br>
+          You can also save outfits info on this app then you won't miss your favorite outfits!
+        </div>
+
+
+            <img src="{% static 'img/home/hat_choosing.jpg' %}" class="p-5 img-fluid" alt="choose img">
+
+          <div class="m-5 lead text-muted text-center">
             Have you felt tired to decide clothes from a bunch of it?<br>
             Have you experienced that you choose the wrong clothes even if you checked forecasts?<br>
             You don't need to overthink your outfit of the day with this ClothesManager!
           </div>
-        </div>
-        <!-- home-box -->
 
-        <div class="home-content-line-box box-ord">
-          <div class="item"><img src="{{ url_for('static', filename='img/ver-hang-outfit.jpg" alt="outfit img"></div>
-          <div class="item line-letter">
-            <h4>Cold Condition and Hot Fashion</h4>
-            This app regularly takes information about the weather from <a href="https:www.tenki.jp">Tenki.jp</a>. ClothesManager can identify which clothes are suitable for the weather.
+
+        <div class="d-flex flex-row align-items-center py-5">
+          <img src="{% static 'img/home/ver-hang-outfit.jpg' %}" class="p-5" height="auto" width="45%" alt="outfit img">
+          <div class="text-muted p-5">
+            <h5>Cold Condition and Hot Fashion</h5>
+            This app regularly takes information about the weather from
+            <a href="https:www.tenki.jp">Tenki.jp</a>. ClothesManager can identify which clothes are suitable for the weather.
           </div>
         </div>
         <!-- home-content-line-box -->
 
-        <div class="home-content-line-box box-rev">
-          <div class="item"><img src="{{ url_for('static', filename='img/standing.jpg" alt="woman img"></div>
-          <div class="item line-letter">
-            <h4>Dress for Success</h4>
+        <div class="d-flex flex-row-reverse align-items-center py-5">
+          <img src="{% static 'img/home/standing.jpg' %}" class="p-5" height="auto" width="45%" alt="outfit img">
+          <div class="text-muted p-5">
+            <h5>Dress for Success</h5>
             Register your clothes so that ClothesManager picks up your clothes which fit today's weather. You don't care about the weather and temperature when you change your clothes.
           </div>
         </div>
         <!-- home-content-line-box box-rev -->
 
-        <div class="home-content-line-box box-ord">
-          <div class="item"><img src="{{ url_for('static', filename='img/white_wall_building.jpg" alt="house img"></div>
-          <div class="item line-letter">
-            <h4>Wear your Smile with Confidence</h4>
+        <div class="d-flex flex-row align-items-center py-5">
+          <img src="{% static 'img/home/white_wall_building.jpg' %}" class="p-5" height="auto" width="45%" alt="outfit img">
+          <div class="text-muted p-5">
+            <h5>Wear your Smile with Confidence</h5>
             Choose appropriate clothes. Save your favorite outfits.<br>
             This app manages your closet!
           </div>
@@ -67,12 +67,12 @@
       </div>
       <!-- container-fluid -->
     </main>
-  <!-- home-mt -->
+    <!-- home-mt -->
 
-  <!-- Login Modal -->
-  <!-- Login Modal -->
+    <!-- Login Modal -->
+    <!-- Login Modal -->
 
-  <!-- Sign In Modal -->
-  <!-- Sign In Modal -->
+    <!-- Sign In Modal -->
+    <!-- Sign In Modal -->
 
-{% endblock %}
+  {% endblock %}
