--- a/services/templates/thanks.html
+++ b/services/templates/thanks.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block title %}Thanks{% endblock %}
+
 {% block content %}
 <h1 class="pt-3">Thanks for visiting! Come back soon!</h1>
 
