--- a/services/templates/base.html
+++ b/services/templates/base.html
@@ -20,6 +20,9 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav mr-auto">
+
+          </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">Home
@@ -38,7 +41,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-user"></i>
               </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                 {% if user.is_authenticated %}
                   <a class="dropdown-item" href="{% url 'accounts:current' %}">Profile</a>
                   <a class="dropdown-item" href="#">Another action</a>
