--- a/services/templates/base.html
+++ b/services/templates/base.html
@@ -21,9 +21,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto">
-
-          </ul>
-          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'home' %}">Home
                 <span class="sr-only">(current)</span></a>
@@ -31,12 +28,17 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'accounts:all' %}">Explore</a>
             </li>
+          </ul>
+          <ul class="navbar-nav">
+            {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'closet:outfits' %}">Outfits</a>
             </li>
             <li>
               <a class="nav-link" href="{% url 'closet:clothes' %}">Clothes</a>
             </li>
+            {% else %}
+            {% endif %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-user"></i>
@@ -44,7 +46,6 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                 {% if user.is_authenticated %}
                   <a class="dropdown-item" href="{% url 'accounts:current' %}">Profile</a>
-                  <a class="dropdown-item" href="#">Another action</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
                 {% else %}
