Modified uploading img of profile

--- a/services/templates/accounts/edit_profile.html
+++ b/services/templates/accounts/edit_profile.html
@@ -11,7 +11,7 @@
 
 {% block content %}
   <div class="container">
-    <form method="POST" class="form">
+    <form method="POST" class="form" enctype="multipart/form-data">
       {% csrf_token %}
       {% bootstrap_form form %}
       {% buttons %}
