--- a/services/web/templates/accounts/user_profile.html
+++ b/services/web/templates/accounts/user_profile.html
@@ -12,8 +12,16 @@
 
 {% block content %}
   <div class="container">
-    {% if request.user.username == user.username %}
-      <h3>Here is my profile.</h3>
+    <h3>
+    {% if user.profile.picture %}
+      <img src="{{ user.profile.picture.url }}" class="rounded-lg" width="auto" height="40px"/>
+    {% else %}
+      <svg class="bd-placeholder-img rounded-lg" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" focusable="false" role="img">
+        <rect width="100%" height="100%" fill="#{{ user.profile.color }}"/>
+      </svg>
+    {% endif %}
+      {{ user.username }}</h3>
+      {% if request.user.username == user.username %}
       <table border="0" class="table">
         <tr>
           <th>Username</th>
@@ -71,10 +79,6 @@
       </small>
 
     {% else %}
-      <h3>{{ request.user.username }}
-        is watching
-        {{ user.username }}
-        profile.</h3>
       <table border="0" class="table">
         <tr>
           <th>Username</th>
