--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -41,7 +41,17 @@
             {% endif %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-user"></i>
+                {% if user.is_authenticated %}
+                    {% if request.user.profile.picture %}
+                      <img src="{{ request.user.profile.picture.url }}" class="rounded-lg" width="auto" height="40px"/>
+                    {% else %}
+                      <svg class="bd-placeholder-img rounded-lg" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" focusable="false" role="img">
+                        <rect width="100%" height="100%" fill="#{{ request.user.profile.color }}"/>
+                      </svg>
+                    {% endif %}
+                {% else %}
+                  <i class="fas fa-user"></i>
+                {% endif %}
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
                 {% if user.is_authenticated %}
@@ -70,7 +80,7 @@
                   <span aria-hidden="true">&times;</span>
                 </button>
                 {% for message in messages %}
-                    {{ message }}
+                  {{ message }}
                 {% endfor %}
               </div>
             </div>
