--- a/services/web/templates/snippets/user_list.html
+++ b/services/web/templates/snippets/user_list.html
@@ -1,4 +1,12 @@
 {% for user in object_list %}
-  <a href="{% url 'accounts:profile' user.username %}">{{ user.username}}</a>
+<div class="p-2">
+
+
+  <a href="{% url 'accounts:profile' user.username %}">
+    <svg class="bd-placeholder-img rounded-lg" width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg" focusable="false" role="img">
+      <rect width="100%" height="100%" fill="#{{ user.profile.color }}"/>
+    </svg>
+    {{ user.username}}</a>
   <br>
+  </div>
 {% endfor %}
