Added preview to html

--- a/services/web/templates/accounts/edit_profile.html
+++ b/services/web/templates/accounts/edit_profile.html
@@ -17,7 +17,9 @@
       {% buttons %}
       <button type="submit" class="btn btn-primary">Save</button>
       {% endbuttons %}
+      {{ form.media }}
     </form>
+    <img id="picture-preview">
   </div>
 {% endblock %}
 
