Added css for default preview

--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -7,6 +7,7 @@
   <head>
     <meta charset="utf-8">
     <script src="https://kit.fontawesome.com/795eb3e898.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/master.css' %}">
     <title>
       {% block title %}{% endblock %}
       - ClothesManager</title>
