--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <script src="https://kit.fontawesome.com/795eb3e898.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/master.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cropper.min.css' %}">
     <title>
       {% block title %}{% endblock %}
       - ClothesManager</title>
@@ -108,6 +109,8 @@
   </div>
 
   <!-- Here were moment and locale -->
+  <script src="{% static 'js/cropper.min.js' %}"></script>
+  <script src="{% static 'js/jquery-cropper.min.js' %}"></script>
   <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
   <script>
