--- a/services/web/templates/accounts/edit_profile.html
+++ b/services/web/templates/accounts/edit_profile.html
@@ -10,8 +10,38 @@
 {% endblock %}
 
 {% block content %}
+<!-- Modal to crop the img -->
+<div class="modal fade" id="modalCrop">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Crop the picture</h4>
+        <button type="button" class="close" data-dismiss="modal" arial-label="Close">
+          <span arial-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <img src="" id="image" style="max-width: 100%;">
+      </div>
+      <div class="modal-footer">
+        <div class="btn-group pull-left" role="group">
+          <button type="button" class="btn btn-default js-zoom-in">
+            <i class="fas fa-search-plus"></i>
+          </button>
+          <button type="button" class="btn btn-default js-zoom-out">
+            <i class="fas fa-search-minus"></i>
+          </button>
+        </div>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary js-crop-and-upload">Crop</button>
+      </div>
+    </div>
+  </div>
+
+</div>
+
   <div class="container">
-    <form method="POST" class="form" enctype="multipart/form-data">
+    <form method="POST" class="form" id="formUpload" enctype="multipart/form-data">
       {% csrf_token %}
       {% bootstrap_form form %}
       {% buttons %}
@@ -19,11 +49,74 @@
       {% endbuttons %}
       {{ form.media }}
     </form>
+    <div class="idefault-preview-img"></div>
     <img id="picture-preview">
   </div>
 {% endblock %}
 
 {% block script %}
+<script>
+  // Open the modal with the preview
+  $("#id_picture").change(function () {
+    if (this.files && this.files[0]) {
+      var reader = new FileReader();
+      reader.onload = function (e) {
+        $("#image").attr("src", e.target.result);
+        $("#modalCrop").modal("show");
+      }
+      reader.readAsDataURL(this.files[0]);
+    }
+  });
+
+  // Handle the cropper box
+  var $image = $("#image");
+  var cropBoxData;
+  var canvasData;
+  $("#modalCrop").on("shown.bs.modal", function () {
+    $image.cropper({
+      viewMode: 1,
+      aspectRatio: 1/1,
+      minCropBoxWidth: 200,
+      minCropBoxHeight: 200,
+      ready: function () {
+        $image.cropper("setCanvasData", canvasData);
+        $image.cropper("setCropBoxData", cropBoxData);
+      }
+    });
+  }).on("hidden.bs.modal", function () {
+    cropBoxData = $image.cropper("getCropBoxData");
+    canvasData = $image.cropper("getCanvasData");
+    $image.cropper("destroy");
+  });
+
+  // Enable zoom in button
+  $(".js-zoom-in").click(function () {
+    $image.cropper("zoom", 0.1);
+  });
+
+  // Enable zoom out button
+  $(".js-zoom-out").click(function () {
+    $image.cropper("zoom", -0.1);
+  });
+
+  // Collect the data and post to the server
+  $(".js-crop-and-upload").click(function () {
+    var cropData = $image.cropper("getData");
+    $("#modalCrop").modal("hide");
+    $("#id_x").val(cropData["x"]);
+    $("#id_y").val(cropData["y"]);
+    $("#id_width").val(cropData["width"]);
+    $("#id_height").val(cropData["height"]);
+    // $("#formUpload").submit();
+    var croppedCanvasData = $image.cropper("getCroppedCanvas");
+    document.getElementsByTagName("body")[0].insertBefore(croppedCanvasData);
+    // document.getElementsByClassName("form")[0].appendChild(croppedCanvasData);
+    });
+
+</script>
+
+
+
   <script>
     const parentCategoryElement = $('#id_area');
     const categoryElement = $('#id_prefecture');
