--- a/services/web/templates/closet/add_clothes.html
+++ b/services/web/templates/closet/add_clothes.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}{{ add_or_edit }} Clothes{% endblock %}
 
@@ -17,9 +18,20 @@
   <form method="POST" class="form" id="formUpload" enctype="multipart/form-data">
     {% csrf_token %}
     {% bootstrap_form form %}
-    {% if clothes.picture %}
-      <img src="{{ clothes.picture.url }}"/>
-    {% endif %}
+    <div class="row ">
+      {% if clothes.picture %}
+      <div class="col-sm-6 pb-3">
+          <div class="">
+            Current pic
+          </div>
+        <img src="{{ clothes.picture.url }}"/>
+      </div>
+      {% endif %}
+      <div class="col-sm-6 pb-3">
+        <div id="preview-title"></div>
+        <div id="cropped-preview-img"></div>
+      </div>
+    </div>
     {% buttons %}
     <button type="submit" class="btn btn-primary">{{ add_or_edit }}</button>
     {% endbuttons %}
@@ -27,95 +39,12 @@
 </div>
 
 <!-- Modal to crop the img -->
-<div class="modal fade" id="modalCrop">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Crop the picture</h4>
-        <button type="button" class="close" data-dismiss="modal" arial-label="Close">
-          <span arial-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <img src="" id="image" style="max-width: 100%;">
-      </div>
-      <div class="modal-footer">
-        <div class="btn-group pull-left" role="group">
-          <button type="button" class="btn btn-default js-zoom-in">
-            <i class="fas fa-search-plus"></i>
-          </button>
-          <button type="button" class="btn btn-default js-zoom-out">
-            <i class="fas fa-search-minus"></i>
-          </button>
-        </div>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary js-crop-and-upload">Crop</button>
-      </div>
-    </div>
-  </div>
-
-</div>
+{% include "snippets/cropping_modal.html" %}
 {% endblock %}
 
 {% block script %}
-  <script>
-    // Open the modal with the preview
-    $("#id_picture").change(function () {
-      if (this.files && this.files[0]) {
-        var reader = new FileReader();
-        reader.onload = function (e) {
-          $("#image").attr("src", e.target.result);
-          $("#modalCrop").modal("show");
-        }
-        reader.readAsDataURL(this.files[0]);
-      }
-    });
-
-    // Handle the cropper box
-    var $image = $("#image");
-    var cropBoxData;
-    var canvasData;
-    $("#modalCrop").on("shown.bs.modal", function () {
-      $image.cropper({
-        viewMode: 1,
-        aspectRatio: 1/1,
-        minCropBoxWidth: 200,
-        minCropBoxHeight: 200,
-        ready: function () {
-          $image.cropper("setCanvasData", canvasData);
-          $image.cropper("setCropBoxData", cropBoxData);
-        }
-      });
-    }).on("hidden.bs.modal", function () {
-      cropBoxData = $image.cropper("getCropBoxData");
-      canvasData = $image.cropper("getCanvasData");
-      $image.cropper("destroy");
-    });
-
-    // Enable zoom in button
-    $(".js-zoom-in").click(function () {
-      $image.cropper("zoom", 0.1);
-    });
-
-    // Enable zoom out button
-    $(".js-zoom-out").click(function () {
-      $image.cropper("zoom", -0.1);
-    });
-
-    // Collect the data and post to the server
-    $(".js-crop-and-upload").click(function () {
-      var cropData = $image.cropper("getData");
-      $("#modalCrop").modal("hide");
-      $("#id_x").val(cropData["x"]);
-      $("#id_y").val(cropData["y"]);
-      $("#id_width").val(cropData["width"]);
-      $("#id_height").val(cropData["height"]);
-      // $("#formUpload").submit();
-      var croppedCanvasData = $image.cropper("getCroppedCanvas");
-      document.getElementsByTagName("body")[0].appendChild(croppedCanvasData);
-    });
-
-  </script>
+  <script src="{% static 'js/crop_picture.js' %}"></script>
+  
 <!-- Make dropdowns for categories -->
   <script>
     const parentCategoryElement = $('#id_parent_category');
