--- a/services/web/templates/closet/clothes_list.html
+++ b/services/web/templates/closet/clothes_list.html
@@ -17,6 +17,7 @@
       {% if object_list %}
         <table class="table table-hover" id="dataTable">
           <tr>
+            <th></th>
             <th>Clothes Name</th>
             <th>Category</th>
             <th>Addtime</th>
@@ -24,8 +25,10 @@
           </tr>
           {% for clothes in object_list %}
             <tr>
+              <td><img src="{{ clothes.picture.url }}" class="rounded-lg" width="auto" height="40px"/></td>
               <td>
-                <a href="{% url 'closet:edit_clothes' clothes.pk %}">{{ clothes.name }}</a>
+                <a href="{% url 'closet:edit_clothes' clothes.pk %}">
+                {{ clothes.name }}</a>
               </td>
               <td>{{ clothes.parent_category }}
                 /
