--- a/services/web/templates/accounts/login.html
+++ b/services/web/templates/accounts/login.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
   <div class="container">
     <h1 class="pt-3">Login</h1>
