--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -97,7 +97,7 @@
     <footer class="fixed-bottom py-4 bg-light mt-auto">
       <div class="container-fluid">
         <div class="d-flex align-items-center justify-content-between small">
-          <div class="text-muted">Copyright &copy; Your Website 2020</div>
+          <div class="text-muted">Copyright &copy; Yu Arakawa 2020</div>
           <div>
             <a href="#">Privacy Policy</a>
             &middot;
@@ -108,7 +108,6 @@
     </footer>
   </div>
 
-  <!-- Here were moment and locale -->
   <script src="{% static 'js/cropper.min.js' %}"></script>
   <script src="{% static 'js/jquery-cropper.min.js' %}"></script>
   <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
