--- a/services/web/templates/closet/clothes_list.html
+++ b/services/web/templates/closet/clothes_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Clothes List{% endblock %}
 
@@ -15,6 +16,7 @@
     <h3>Clothes List</h3>
     {% if request.user.username == user.username %}
       {% if object_list %}
+      <form action="" method="POST">
         <table class="table table-hover" id="dataTable">
           <tr>
             <th></th>
@@ -22,22 +24,27 @@
             <th>Category</th>
             <th>Addtime</th>
             <th>Publish</th>
+            <th>Delete</th>
           </tr>
-          {% for clothes in object_list %}
-            <tr>
-              <td><img src="{{ clothes.picture.url }}" class="rounded-lg" width="auto" height="40px"/></td>
-              <td>
-                <a href="{% url 'closet:edit_clothes' clothes.pk %}">
-                {{ clothes.name }}</a>
-              </td>
-              <td>{{ clothes.parent_category }}
-                /
-                {{ clothes.category }}</td>
-              <td>{{ clothes.created_at }}</td>
-              <td>{{ clothes.publish }}</td>
-            </tr>
-          {% endfor %}
+            {% for clothes in object_list %}
+              <tr>
+                <td><img src="{{ clothes.show_img }}" class="rounded-lg" width="auto" height="40px"/></td>
+                <td>
+                  <a href="{% url 'closet:edit_clothes' clothes.pk %}">
+                  {{ clothes.name }}</a>
+                </td>
+                <td>{{ clothes.parent_category }}
+                  /
+                  {{ clothes.category }}</td>
+                <td>{{ clothes.created_at }}</td>
+                <td>{{ clothes.publish }}</td>
+                <td><input type="checkbox" name="delete" value="{{ clothes.pk }}"></td>
+              </tr>
+            {% endfor %}
+            {% csrf_token %}
         </table>
+        <button type="submit">Delete</button>
+      </form>
       {% else %}
         <h3>No Clothes Yet</h3>
       {% endif %}
